<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/activity_1"
        android:textAlignment="center"
        android:textSize="15pt" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/tobias"
        android:textAlignment="center"
        android:textSize="10pt" />
    <Button
        android:id="@+id/goto_activity_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/goto_2"
        android:textSize="10pt" />

</LinearLayout>